--- a/css/style.css
+++ b/css/style.css
@@ -24,17 +24,18 @@ h1 {
 .navbar {
   display: flex;
   justify-content: center;
-  background-color: #333; /* Add your desired background color */
+  background-color: #7E3C35; 
   padding: 10px;
 }
 
 .navbar a {
-  color: white; /* Add your desired text color */
+  font-family: 'Barlow', 'Arial', sans-serif;
+  color: black; 
   text-decoration: none;
   padding: 10px;
   margin: 0 10px;
 }
 
 .navbar a:hover {
-  background-color: #555; /* Add your desired hover background color */
+  background-color: #c89e66; /* Add your desired hover background color */
 }
