updated layout, replaced picture

--- a/css/style.css
+++ b/css/style.css
@@ -58,11 +58,16 @@ h1 {
   padding: 10px;
 }
 
+.home-text p {
+  font-size: 1.3em;
+}
+
 .home-text {
   flex: 1;
   padding: 15px;
   margin-bottom: 200px;
   padding: 30px;
+  text-align: center;
 }
 
 .home-image {
